...
            )
        }
    }
}

object LoginContentTestArgs {
    const val EMAIL_ICON = "LOGIN_CONTENT_EMAIL_ICON"
}

@ThemePreview
@Composable
private fun Preview() {
    val uiState = LoginUiState(
...
